# mypipline.sqaaas

./: .gitignore  .gitlab-ci.yml  .pip-license-ignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  License.md  Makefile  Pipfile  README.md  README.rst  environment.yml  example.hifis-surveyval.yml  pyproject.toml  setup.py
.gitlab/ci/: build.gitlab-ci.yml  docs.gitlab-ci.yml  lint.gitlab-ci.yml  package.gitlab-ci.yml  sqa.gitlab-ci.yml  test.gitlab-ci.yml
.gitlab/issue_templates/: bug_report.md  documentation.md
.sqa/: config.yml  docker-compose.yml
.sqa/apply_license/: config.yml
.sqa/check_credentials/: gitleaks_config.toml
.sqa/list_used_licenses/: config.yml
data/: HIFIS_Software_Survey_2020_Questions.csv  HIFIS_Software_Survey_2020_Questions.yml
docs/: Makefile  make.bat
docs/source/: api.rst  conf.py  index.rst  (+3 more)
hifis_surveyval/: cli.py  data_container.py  hifis_surveyval.py  version.py
metadata/: HIFIS_Software_Survey_2020_Questions.yml
scripts/: G3001_free_text_answers.py  G3002_vcs_used.py  G3003_sw_dev_platforms_used.py  G3004_ci_service_used.py  G3005_code_review_tools_used.py  G4002_testing_techniques.py  ci_usage.py  community_coding_time_distribution.py  community_topic_search.py  demographics.py  dummy.py  example_institute_count.py  example_plotting_stacked_bar_chart.py  global_descriptive_statistics.py  language_per_field.py  vcs_per_field.py
survey_analysis/: __init__.py  answer.py  cli.py  data.py  dispatch.py  global.py  globals.py  metadata.py  plot.py  question.py  settings.py  util.py  version.py
tests/: __init__.py  test_cli.py  test_example.py  test_metadata.py
(+79 files in other folders)
