[tool.poetry]
name = "survey_analysis"
version = "0.1.0"
description = "This project is used to develop analysis scripts for the HIFIS Software survey."
license = "GPL-3.0-or-later"
authors = ["HIFIS Software <software@hifis.net>"]
readme = "README.md"
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering',
    'License :: OSI Approved :: GPLv3 License',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8'
]
packages = [
    {include = "survey_analysis", from = "."}
]
include = ["LICENSE", "docs/build/html/**/*.*"]

[tool.poetry.scripts]
survey_analysis = "survey_analysis.cli:cli"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
click = ">=7.0,<8'"
matplotlib = ">=3.2.0"
numpy = ">=1.18.1"
pandas = ">=1.0.1"
pyyaml = ">=5.3.1"
wordcloud = ">=1.7.0"
tabulate = ">=0.8.7"

[tool.poetry.dev-dependencies]
flake8-docstrings = ">=1.5.0"
isort = ">=5.0.0"
pytest = ">=3.4.0"
pytest-cov = ">=2.5.1"
pytest-pythonpath = ">=0.7.2"
Sphinx = ">=2.2.0"
sphinx-rtd-theme = ">=0.4.3,<1"
black = "^20.8b1"
flakehell = "^0.9.0"

[tool.coverage.run]
omit = ["*/venv/*",
        "*/tests/*",
        "*/docs/*",
        "*/dist/*",
        "scratch*.py"]

[tool.coverage.html]
directory = "./htmlcov"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning"]

[tool.flakehell.plugins]
flake8-docstrings = ["+*"]
pycodestyle = ["+*", "-W503"]
pyflakes = ["+*"]
